# rust-osdev-jumpstart

./: .gdbinit  Cargo.toml  Makefile  README.md
.cargo/: config.toml
src/: cpu.rs  lib.rs  main.rs
src/_arch/aarch64/: cpu.rs  linker.ld
src/_arch/riscv64/: cpu.rs  linker.ld
src/_arch/x86_64/: cpu.rs
src/util/: mod.rs  panic.rs  testing.rs
test-macros/: Cargo.toml
tests/: 000_kernel_init.rs  001_should_panic.rs
tests/panic_exit_success/: mod.rs
