[package]
name = "kernel"
version = "0.1.0"
authors = ["Alister Lee <dev@shortepic.com>"]
edition = "2018"

[lib]
name = "libkernel"
# NOTE: exclude cargo tests --lib from cargo tests --tests; see make tests
test = false

[[bin]]
name = "kernel"
test = false

# Note: profile.<name>.panic is set in target definition and .cargo/config due to
# https://github.com/rust-lang/cargo/issues/7359
# [profile.dev|release]
# panic = "abort"

[dependencies]
test-types = { path = "test-types" }
qemu-exit = "^1"

[dev-dependencies]
test-macros = { path = "test-macros" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = "^5.1"

[target.'cfg(target_arch = "x86_64")'.dependencies]
bootloader = "^0.9"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 33             # (0x10 << 1) | 1
